# rust-api

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  api-requests.http  justfile  rustfmt.toml
.cursor/rules/: rust-api-design.mdc
.github/workflows/: ci.yml
crates/rust-api/: Cargo.toml
crates/rust-api-macros/: Cargo.toml
crates/rust-api-macros/src/: lib.rs  route.rs
crates/rust-api/src/: app.rs  controller.rs  di.rs  error.rs  lib.rs  middleware.rs  pipeline.rs  router.rs  server.rs
crates/rust-api/tests/: pipeline_integration.rs
crates/rustapi/: Cargo.toml
crates/rustapi-macros/: Cargo.toml
crates/rustapi/src/: lib.rs
docs/: ARCHITECTURE.md  CompositionalRefactor.md
examples/: hello_world.rs  with_macros.rs
examples/basic-api/: Cargo.toml  README.md
examples/basic-api/src/: main.rs
examples/basic-api/src/controllers/: admin_controller.rs  echo_controller.rs  health_controller.rs  metrics_controller.rs  mod.rs
examples/basic-api/src/services/: admin_service.rs  echo_service.rs  health_service.rs  metrics_service.rs  mod.rs
src/: main.rs
src/controllers/: echo_controller.rs  health_controller.rs  mod.rs
src/services/: echo_service.rs  health_service.rs  mod.rs
