[package]
name = "basic-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi = { path = "../../crates/rustapi" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
